# StockMarketProject

./: README.md  main.py  pyproject.toml
.streamlit/: secrets.toml
